--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "author": "ShaunLWM <shaunlimweimin@gmail.com>",
   "license": "GPL-3.0+",
   "devDependencies": {
+    "download": "^7.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.0",
-    "eslint-plugin-react-hooks": "^1.7.0"
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "node-fetch": "^2.6.0",
+    "overwatchleague.js": "^0.0.5"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
