--- a/package.json
+++ b/package.json
@@ -18,9 +18,15 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-bnet": "^2.0.0",
     "socket.io": "^2.3.0"
   }
 }
