--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "socket.io-client": "^2.3.0",
-    "use-immer": "^0.3.5"
+    "use-immer": "^0.3.5",
+    "use-persisted-state": "^0.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
