--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "3.3.0",
     "socket.io-client": "^2.3.0",
     "use-immer": "^0.3.5",
-    "use-persisted-state": "^0.3.0"
+    "use-persisted-state": "^0.3.0",
+    "uuidv4": "^6.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
