--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "eslint-plugin-flowtype": "^4.6.0",
     "immer": "^5.3.2",
     "node-fetch": "^2.6.0",
     "prop-types": "^15.7.2",
@@ -27,7 +28,12 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "settings": {
+      "react": {
+        "version": "999.999.999"
+      }
+    }
   },
   "browserslist": {
     "production": [
