--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "socket.io-client": "^2.3.0",
+    "timeago.js": "^4.0.2",
     "use-immer": "^0.3.5",
     "use-persisted-state": "^0.3.0",
     "uuidv4": "^6.0.2"
