--- a/client/package.json
+++ b/client/package.json
@@ -1,53 +1,53 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.9.0",
-    "@material-ui/icons": "^4.5.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@welldone-software/why-did-you-render": "^4.0.0",
-    "eslint-plugin-flowtype": "^4.6.0",
-    "immer": "^5.3.2",
-    "node-fetch": "^2.6.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
-    "socket.io-client": "^2.3.0",
-    "timeago.js": "^4.0.2",
-    "use-deep-compare-effect": "^1.3.0",
-    "use-immer": "^0.3.5",
-    "use-persisted-state": "^0.3.0",
-    "uuidv4": "^6.0.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app",
-    "settings": {
-      "react": {
-        "version": "999.999.999"
-      }
-    }
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "client",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@material-ui/core": "^4.9.0",
+		"@material-ui/icons": "^4.5.1",
+		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/react": "^9.3.2",
+		"@testing-library/user-event": "^7.1.2",
+		"@welldone-software/why-did-you-render": "^4.0.0",
+		"eslint-plugin-flowtype": "^4.6.0",
+		"immer": "^5.3.2",
+		"node-fetch": "^2.6.0",
+		"prop-types": "^15.7.2",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
+		"react-router-dom": "^5.1.2",
+		"react-scripts": "3.3.0",
+		"socket.io-client": "^2.3.0",
+		"timeago.js": "^4.0.2",
+		"use-deep-compare-effect": "^1.3.0",
+		"use-immer": "^0.3.5",
+		"use-persisted-state": "^0.3.0",
+		"uuidv4": "^6.0.2"
+	},
+	"scripts": {
+		"start": "set PORT=3002 && react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app",
+		"settings": {
+			"react": {
+				"version": "999.999.999"
+			}
+		}
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
